--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,11 +3,11 @@ requires = ['setuptools >= 64', 'wheel']
 build-backend = 'setuptools.build_meta'
 
 [tool.setuptools]
-packages = ["opensipkd", "opensipkd.detable", "opensipkd.base"]
+packages = ["tsa_pos"]
 
 [tool.mypy]
 exclude = [
-    'bak',
+    'bak', 'docs', 'venv'
 ]
 show_error_codes = true
 
@@ -66,7 +66,7 @@ dev = [
     'pytest', 'webtest']
 
 [project.entry-points."paste.app_factory"]
-main = 'tsa_pos.main'
+main = 'tsa_pos:main'
 
 [project.scripts]
 tsa-pos-db-init = 'tsa_pos.scripts.initializedb:main'
