Refactor models and add product category functionality
- Updated DefaultModel to improve session handling and query methods.
- Introduced StandardModel for common fields in models.
- Created ProductCategory and Product models with relationships.
- Added CRUD views for ProductCategory.
- Implemented database migrations for new product-related tables.
- Cleaned up unused code and comments in various model files.
- Enhanced routes for product and product category management.

--- a/development.ini
+++ b/development.ini
@@ -7,8 +7,8 @@ pyramid.debug_notfound = true
 pyramid.debug_routematch = true
 pyramid.debug_templates = true
 default_locale_name = id
-sqlalchemy.url = postgresql://cendikia:1111@localhost:5432/tsa_pos
-session.url = postgresql://cendikia:1111@localhost:5432/tsa_pos
+sqlalchemy.url = postgresql://aagusti:a@localhost:5432/tsa
+session.url = postgresql://aagusti:a@localhost:5432/tsa
 pyramid.includes =
     pyramid_tm
     pyramid_beaker
@@ -96,4 +96,4 @@ filterwarnings =
 
 [alembic]
 script_location = tsa_pos:alembic
-sqlalchemy.url = postgresql://cendikia:1111@localhost:5432/tsa_pos
+sqlalchemy.url = postgresql://aagusti:a@localhost:5432/tsa
