Refactor logging levels, remove deprecated migration scripts, and enhance product and category views with validation and schema improvements

--- a/development.ini
+++ b/development.ini
@@ -56,7 +56,7 @@ handlers =console, filelog
 qualname = tsa_pos
 
 [logger_sqlalchemy]
-level = WARN
+level = DEBUG
 handlers =
 qualname = sqlalchemy.engine
 # "level = INFO" logs SQL queries.
@@ -80,7 +80,7 @@ formatter = generic
 [handler_tabel]
 class = opensipkd.base.handlers.SQLAlchemyHandler
 args = ()
-level = WARN
+level = DEBUG
 formatter = generic
 
 [formatter_generic]
