--- a/babas.ini
+++ b/babas.ini
@@ -40,7 +40,7 @@ port = 6543
 keys = root, tsa_pos, sqlalchemy
 
 [handlers]
-keys = console, filelog
+keys = console
 #, tabel
 [formatters]
 keys = generic
@@ -52,7 +52,7 @@ handlers =
 
 [logger_tsa_pos]
 level = DEBUG
-handlers =console, filelog
+handlers =console
 qualname = tsa_pos
 
 [logger_sqlalchemy]
